[package]
name = "baton"
version = "0.1.0"
edition = "2024"
description = "Situational awareness for Claude Code sessions"

[[bin]]
name = "baton"
path = "src/main.rs"

[[bin]]
name = "baton-overlay"
path = "src/overlay.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
colored = "3"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
gtk4 = { version = "0.10", features = ["v4_12"] }
gtk4-layer-shell = "0.7"
glib = "0.21"

[profile.release]
strip = true
lto = true
